--- a/pages/index.html
+++ b/pages/index.html
@@ -74,7 +74,9 @@
             <li class="col">
               <a href="#">
                 <div class="card">
-                  <img class="mb-2" src="/assets/images/home-section3-1.png" alt="OPTICAL">
+                  <img class="mb-2"
+                    src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section3-1.png"
+                    alt="OPTICAL">
                   <h3>OPTICAL</h3>
                 </div>
               </a>
@@ -82,7 +84,9 @@
             <li class="col">
               <a href="#">
                 <div class="card">
-                  <img class="mb-2" src="/assets/images/home-section3-2.png" alt="SUNGLASSES">
+                  <img class="mb-2"
+                    src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section3-2.png"
+                    alt="SUNGLASSES">
                   <h3>SUNGLASSES</h3>
                 </div>
               </a>
@@ -90,7 +94,9 @@
             <li class="col">
               <a href="#">
                 <div class="card">
-                  <img class="mb-2" src="/assets/images/home-section3-3.png" alt="FUNCTIONAL">
+                  <img class="mb-2"
+                    src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section3-3.png"
+                    alt="FUNCTIONAL">
                   <h3>FUNCTIONAL</h3>
                 </div>
               </a>
@@ -107,8 +113,12 @@
               <a href="#">
                 <div>
                   <picture>
-                    <source srcset="/assets/images/home-section4-1-sm.png" media="(max-width: 992px)">
-                    <img src="/assets/images/home-section4-1.png" alt="Logo">
+                    <source
+                      srcset="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section4-1-sm.png"
+                      media="(max-width: 992px)">
+                    <img
+                      src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section4-1.png"
+                      alt="Logo">
                   </picture>
                   <p>DOUBLE A+</p>
                 </div>
@@ -118,8 +128,12 @@
               <a href="#">
                 <div>
                   <picture>
-                    <source srcset="/assets/images/home-section4-2-sm.png" media="(max-width: 992px)">
-                    <img src="/assets/images/home-section4-2.png" alt="Logo">
+                    <source
+                      srcset="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section4-2-sm.png"
+                      media="(max-width: 992px)">
+                    <img
+                      src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section4-2.png"
+                      alt="Logo">
                   </picture>
                   <p>YOUTH</p>
                 </div>
@@ -136,7 +150,9 @@
           <div class="row">
             <div class="col">
               <div class="card">
-                <img src="/assets/images/home-section5-1.png" alt="">
+                <img
+                  src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-1.png"
+                  alt="">
                 <div class="recommend-inner">
                   <span class="fw-medium mb-2">Jessy</span>
                   <p>眼鏡品質優良，下次還會想來這邊購買！</p>
@@ -146,7 +162,9 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/assets/images/home-section5-2.png" alt="">
+                <img
+                  src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-2.png"
+                  alt="">
                 <div class="recommend-inner">
                   <span class="fw-medium mb-2">凱倫</span>
                   <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
@@ -156,7 +174,9 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/assets/images/home-section5-3.png" alt="">
+                <img
+                  src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-3.png"
+                  alt="">
                 <div class="recommend-inner">
                   <span class="fw-medium mb-2">悠悠</span>
                   <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
@@ -166,7 +186,9 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/assets/images/home-section5-4.png" alt="">
+                <img
+                  src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-4.png"
+                  alt="">
                 <div class="recommend-inner">
                   <span class="fw-medium mb-2">Kyuan</span>
                   <p>服務很好，品質沒有任何問題，非常喜歡。</p>
