--- a/pages/optical.html
+++ b/pages/optical.html
@@ -18,14 +18,20 @@
                 <div class="series-banner d-flex">
                     <div class="w-50">
                         <picture>
-                            <source srcset="/assets/images/product-header-sm-1.png" media="(max-width: 768px)">
-                            <img src="/assets/images/product-header-1.png" alt="Logo">
+                            <source
+                                srcset="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-header-sm-1.png"
+                                media="(max-width: 768px)">
+                            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-header-1.png"
+                                alt="Logo">
                         </picture>
                     </div>
                     <div class="w-50">
                         <picture>
-                            <source srcset="/assets/images/product-header-sm-2.png" media="(max-width: 768px)">
-                            <img src="/assets/images/product-header-2.png" alt="Logo">
+                            <source
+                                srcset="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-header-sm-2.png"
+                                media="(max-width: 768px)">
+                            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-header-2.png"
+                                alt="Logo">
                         </picture>
                     </div>
                 </div>
@@ -39,7 +45,8 @@
                     <div class="row mb-20">
                         <div class="col">
                             <div>
-                                <img src="/assets/images/product-1.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-1.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -52,7 +59,8 @@
                         </div>
                         <div class="col">
                             <div>
-                                <img src="/assets/images/product-2.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-2.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -65,7 +73,8 @@
                         </div>
                         <div class="col">
                             <div>
-                                <img src="/assets/images/product-3.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-3.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -78,7 +87,8 @@
                         </div>
                         <div class="col">
                             <div>
-                                <img src="/assets/images/product-4.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-4.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -91,7 +101,8 @@
                         </div>
                         <div class="col">
                             <div>
-                                <img src="/assets/images/product-5.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-5.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -104,7 +115,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-6.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-6.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -117,7 +129,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-1.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-1.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -130,7 +143,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-2.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-2.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -143,7 +157,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-3.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-3.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -156,7 +171,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-4.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-4.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -169,7 +185,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-5.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-5.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -182,7 +199,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-6.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-6.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
