--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>index</title>
+  <title>看得清，才能看得遠-眼鏡網站 | Sherry Wu</title>
   <%- include('./layout/head'); -%>
 </head>
 
