--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet" />
 <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />  <script type="module" crossorigin src="/24trainingclass_week3_4/assets/main-9df03544.js"></script>
-  <link rel="stylesheet" href="/24trainingclass_week3_4/assets/main-10a40810.css">
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />  <script type="module" crossorigin src="/24trainingclass_week3_4/assets/main-7c5cff03.js"></script>
+  <link rel="stylesheet" href="/24trainingclass_week3_4/assets/main-4a9b8cba.css">
 </head>
 
 <body>
@@ -55,9 +55,15 @@
             </div>
             <div class="footer-social">
                 <ul class="d-flex">
-                    <li><a href="#"><img src="/assets/images/ic-social-fb.png" alt="fb"></a></li>
-                    <li><a href="#"><img src="/assets/images/ic_social_ig.png" alt="ig"></a></li>
-                    <li><a href="#"><img src="/assets/images/ic_social_line.png" alt="line"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic-social-fb.png"
+                                alt="fb"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic_social_ig.png"
+                                alt="ig"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic_social_line.png"
+                                alt="line"></a></li>
                 </ul>
             </div>
         </div>
