--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>index</title>
+  <title>看得清，才能看得遠-眼鏡網站 | Sherry Wu</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet" />
@@ -13,8 +13,8 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet" />
 <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />  <script type="module" crossorigin src="/24trainingclass_week3_4/assets/main-9df03544.js"></script>
-  <link rel="stylesheet" href="/24trainingclass_week3_4/assets/main-10a40810.css">
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />  <script type="module" crossorigin src="/24trainingclass_week3_4/assets/main-7c5cff03.js"></script>
+  <link rel="stylesheet" href="/24trainingclass_week3_4/assets/main-4a9b8cba.css">
 </head>
 
 <body>
@@ -96,7 +96,9 @@
             <li class="col">
               <a href="#">
                 <div class="card">
-                  <img class="mb-2" src="/assets/images/home-section3-1.png" alt="OPTICAL">
+                  <img class="mb-2"
+                    src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section3-1.png"
+                    alt="OPTICAL">
                   <h3>OPTICAL</h3>
                 </div>
               </a>
@@ -104,7 +106,9 @@
             <li class="col">
               <a href="#">
                 <div class="card">
-                  <img class="mb-2" src="/assets/images/home-section3-2.png" alt="SUNGLASSES">
+                  <img class="mb-2"
+                    src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section3-2.png"
+                    alt="SUNGLASSES">
                   <h3>SUNGLASSES</h3>
                 </div>
               </a>
@@ -112,7 +116,9 @@
             <li class="col">
               <a href="#">
                 <div class="card">
-                  <img class="mb-2" src="/assets/images/home-section3-3.png" alt="FUNCTIONAL">
+                  <img class="mb-2"
+                    src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section3-3.png"
+                    alt="FUNCTIONAL">
                   <h3>FUNCTIONAL</h3>
                 </div>
               </a>
@@ -129,8 +135,12 @@
               <a href="#">
                 <div>
                   <picture>
-                    <source srcset="/assets/images/home-section4-1-sm.png" media="(max-width: 992px)">
-                    <img src="/assets/images/home-section4-1.png" alt="Logo">
+                    <source
+                      srcset="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section4-1-sm.png"
+                      media="(max-width: 992px)">
+                    <img
+                      src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section4-1.png"
+                      alt="Logo">
                   </picture>
                   <p>DOUBLE A+</p>
                 </div>
@@ -140,8 +150,12 @@
               <a href="#">
                 <div>
                   <picture>
-                    <source srcset="/assets/images/home-section4-2-sm.png" media="(max-width: 992px)">
-                    <img src="/assets/images/home-section4-2.png" alt="Logo">
+                    <source
+                      srcset="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section4-2-sm.png"
+                      media="(max-width: 992px)">
+                    <img
+                      src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section4-2.png"
+                      alt="Logo">
                   </picture>
                   <p>YOUTH</p>
                 </div>
@@ -158,7 +172,9 @@
           <div class="row">
             <div class="col">
               <div class="card">
-                <img src="/assets/images/home-section5-1.png" alt="">
+                <img
+                  src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-1.png"
+                  alt="">
                 <div class="recommend-inner">
                   <span class="fw-medium mb-2">Jessy</span>
                   <p>眼鏡品質優良，下次還會想來這邊購買！</p>
@@ -168,7 +184,9 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/assets/images/home-section5-2.png" alt="">
+                <img
+                  src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-2.png"
+                  alt="">
                 <div class="recommend-inner">
                   <span class="fw-medium mb-2">凱倫</span>
                   <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
@@ -178,7 +196,9 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/assets/images/home-section5-3.png" alt="">
+                <img
+                  src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-3.png"
+                  alt="">
                 <div class="recommend-inner">
                   <span class="fw-medium mb-2">悠悠</span>
                   <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
@@ -188,7 +208,9 @@
             </div>
             <div class="col">
               <div class="card">
-                <img src="/assets/images/home-section5-4.png" alt="">
+                <img
+                  src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-4.png"
+                  alt="">
                 <div class="recommend-inner">
                   <span class="fw-medium mb-2">Kyuan</span>
                   <p>服務很好，品質沒有任何問題，非常喜歡。</p>
@@ -243,9 +265,15 @@
             </div>
             <div class="footer-social">
                 <ul class="d-flex">
-                    <li><a href="#"><img src="/assets/images/ic-social-fb.png" alt="fb"></a></li>
-                    <li><a href="#"><img src="/assets/images/ic_social_ig.png" alt="ig"></a></li>
-                    <li><a href="#"><img src="/assets/images/ic_social_line.png" alt="line"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic-social-fb.png"
+                                alt="fb"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic_social_ig.png"
+                                alt="ig"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic_social_line.png"
+                                alt="line"></a></li>
                 </ul>
             </div>
         </div>
