--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>about</title>
-    <script type="module" crossorigin src="/24trainingclass_week3_4/assets/main-9df03544.js"></script>
-    <link rel="stylesheet" href="/24trainingclass_week3_4/assets/main-10a40810.css">
+    <script type="module" crossorigin src="/24trainingclass_week3_4/assets/main-7c5cff03.js"></script>
+    <link rel="stylesheet" href="/24trainingclass_week3_4/assets/main-4a9b8cba.css">
   </head>
   <body>
     <header class="header">
@@ -46,9 +46,15 @@
             </div>
             <div class="footer-social">
                 <ul class="d-flex">
-                    <li><a href="#"><img src="/assets/images/ic-social-fb.png" alt="fb"></a></li>
-                    <li><a href="#"><img src="/assets/images/ic_social_ig.png" alt="ig"></a></li>
-                    <li><a href="#"><img src="/assets/images/ic_social_line.png" alt="line"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic-social-fb.png"
+                                alt="fb"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic_social_ig.png"
+                                alt="ig"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic_social_line.png"
+                                alt="line"></a></li>
                 </ul>
             </div>
         </div>
