--- a/optical.html
+++ b/optical.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about</title>
+    <title>看得清，才能看得遠-系列鏡框 | Sherry Wu</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet" />
@@ -13,8 +13,8 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet" />
 <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />  <script type="module" crossorigin src="/24trainingclass_week3_4/assets/main-9df03544.js"></script>
-  <link rel="stylesheet" href="/24trainingclass_week3_4/assets/main-10a40810.css">
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />  <script type="module" crossorigin src="/24trainingclass_week3_4/assets/main-7c5cff03.js"></script>
+  <link rel="stylesheet" href="/24trainingclass_week3_4/assets/main-4a9b8cba.css">
 </head>
 
 <body>
@@ -47,14 +47,20 @@
                 <div class="series-banner d-flex">
                     <div class="w-50">
                         <picture>
-                            <source srcset="/assets/images/product-header-sm-1.png" media="(max-width: 768px)">
-                            <img src="/assets/images/product-header-1.png" alt="Logo">
+                            <source
+                                srcset="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-header-sm-1.png"
+                                media="(max-width: 768px)">
+                            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-header-1.png"
+                                alt="Logo">
                         </picture>
                     </div>
                     <div class="w-50">
                         <picture>
-                            <source srcset="/assets/images/product-header-sm-2.png" media="(max-width: 768px)">
-                            <img src="/assets/images/product-header-2.png" alt="Logo">
+                            <source
+                                srcset="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-header-sm-2.png"
+                                media="(max-width: 768px)">
+                            <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-header-2.png"
+                                alt="Logo">
                         </picture>
                     </div>
                 </div>
@@ -68,7 +74,8 @@
                     <div class="row mb-20">
                         <div class="col">
                             <div>
-                                <img src="/assets/images/product-1.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-1.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -81,7 +88,8 @@
                         </div>
                         <div class="col">
                             <div>
-                                <img src="/assets/images/product-2.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-2.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -94,7 +102,8 @@
                         </div>
                         <div class="col">
                             <div>
-                                <img src="/assets/images/product-3.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-3.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -107,7 +116,8 @@
                         </div>
                         <div class="col">
                             <div>
-                                <img src="/assets/images/product-4.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-4.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -120,7 +130,8 @@
                         </div>
                         <div class="col">
                             <div>
-                                <img src="/assets/images/product-5.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-5.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -133,7 +144,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-6.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-6.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -146,7 +158,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-1.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-1.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -159,7 +172,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-2.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-2.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -172,7 +186,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-3.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-3.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -185,7 +200,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-4.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-4.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -198,7 +214,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-5.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-5.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -211,7 +228,8 @@
                         </div>
                         <div class="col d-sm-none">
                             <div>
-                                <img src="/assets/images/product-6.png" alt="">
+                                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-6.png"
+                                    alt="">
                                 <div class="d-flex justify-content-between">
                                     <p>BJ41600S</p>
                                     <p class="text-primary fw-medium">NTD3,490</p>
@@ -257,9 +275,15 @@
             </div>
             <div class="footer-social">
                 <ul class="d-flex">
-                    <li><a href="#"><img src="/assets/images/ic-social-fb.png" alt="fb"></a></li>
-                    <li><a href="#"><img src="/assets/images/ic_social_ig.png" alt="ig"></a></li>
-                    <li><a href="#"><img src="/assets/images/ic_social_line.png" alt="line"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic-social-fb.png"
+                                alt="fb"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic_social_ig.png"
+                                alt="ig"></a></li>
+                    <li><a href="#"><img
+                                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/ic_social_line.png"
+                                alt="line"></a></li>
                 </ul>
             </div>
         </div>
