--- a/pages/index.html
+++ b/pages/index.html
@@ -208,12 +208,13 @@
             <label for="name">姓名</label>
             <input id="name" type="text" name="Name" placeholder="陳小明">
             <label for="tel">聯絡電話</label>
-            <input id="tel" name="tel" placeholder="0912-345-678">
+            <input id="tel" type="tel" name="tel" placeholder="0912-345-678">
             <label for="email">電子郵件</label>
-            <input id="email" name="email" placeholder="example@email.com">
+            <input id="email" type="email" name="email" placeholder="example@email.com">
             <label for="remark">備註</label>
             <textarea class="mb-4" rows="8" id="remark" name="remark" placeholder="請輸入您的意見"></textarea>
-            <div class="mb-12"><input type="checkbox" name="" id="check">
+            <div class="mb-12">
+              <input id="check" type="checkbox" name="check">
               <label for="check">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
             </div>
             <input class="form-but" type="submit" value="確認送出">
