--- a/optical.html
+++ b/optical.html
@@ -260,7 +260,7 @@
             <div>
                 <ul class="footer-nav d-flex">
                     <li><a href="index.html">首頁</a></li>
-                    <li><a href="#">系列鏡框</a></li>
+                    <li><a href="optical.html">系列鏡框</a></li>
                     <li><a href="#">門市據點</a></li>
                     <li><a href="#">部落格</a></li>
                     <li><a href="#">常見問題</a></li>
