--- a/pages/optical.html
+++ b/pages/optical.html
@@ -38,7 +38,7 @@
 
                 <div class="container-fluid">
                     <div class="text-center py-20">
-                        <p class="fz-10-5 fz-sm-6 fw-medium">Celluloid Combi</p>
+                        <h1 class="fz-10-5 fz-sm-6 fw-medium">Celluloid Combi</h1>
                         <p class="fz-7 fz-sm-6 mb-8">賽璐珞鈦金屬混合鏡框</p>
                     </div>
 
