--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,7 @@
 
     <main>
       <section class="banner">
-        <div class="container-fluid d-flex">
+        <div class="container-fluid d-flex h-100">
           <div class="banner-inner">
             <p>Promise-Desert 2020 早春系列</p>
             <h1>看得清，才能看得遠</h1>
