--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>about</title>
-    <script type="module" crossorigin src="/24trainingclass_week3_4/assets/main-a4242752.js"></script>
-    <link rel="stylesheet" href="/24trainingclass_week3_4/assets/main-37652989.css">
+    <script type="module" crossorigin src="/24trainingclass_week3_4/assets/main-67c5a055.js"></script>
+    <link rel="stylesheet" href="/24trainingclass_week3_4/assets/main-79531112.css">
   </head>
   <body>
     <header class="header">
@@ -27,7 +27,7 @@
 </header>    <h1>我是about</h1>
     <footer class="footer">
     <div class="container-fluid">
-        <div class="d-flex justify-content-between mb-8">
+        <div class="d-flex justify-content-between bottom-border-1 pb-8 mb-8">
             <div>
                 <ul class="footer-nav d-flex">
                     <li><a href="index.html">首頁</a></li>
@@ -58,7 +58,6 @@
                 </ul>
             </div>
         </div>
-        <hr class="mb-8">
 
         <div class="footer-footer d-flex">
             <p>Copyright © 2020 Glasses.All rights reserved.</p>
