--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet" />
 <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />  <script type="module" crossorigin src="/24trainingclass_week3_4/assets/main-a4242752.js"></script>
-  <link rel="stylesheet" href="/24trainingclass_week3_4/assets/main-37652989.css">
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />  <script type="module" crossorigin src="/24trainingclass_week3_4/assets/main-67c5a055.js"></script>
+  <link rel="stylesheet" href="/24trainingclass_week3_4/assets/main-79531112.css">
 </head>
 
 <body>
@@ -36,7 +36,7 @@
 </header>
     <main>
       <section class="banner">
-        <div class="container-fluid d-flex">
+        <div class="container-fluid d-flex h-100">
           <div class="banner-inner">
             <p>Promise-Desert 2020 早春系列</p>
             <h1>看得清，才能看得遠</h1>
@@ -247,7 +247,7 @@
 
     <footer class="footer">
     <div class="container-fluid">
-        <div class="d-flex justify-content-between mb-8">
+        <div class="d-flex justify-content-between bottom-border-1 pb-8 mb-8">
             <div>
                 <ul class="footer-nav d-flex">
                     <li><a href="index.html">首頁</a></li>
@@ -278,7 +278,6 @@
                 </ul>
             </div>
         </div>
-        <hr class="mb-8">
 
         <div class="footer-footer d-flex">
             <p>Copyright © 2020 Glasses.All rights reserved.</p>
